# socrata-py

./: Dockerfile  LICENSE.md  Makefile  README.md  lazy_pool.py  requirements.txt  setup.cfg  setup.py
__init__/: index.md
docs/: authorization.m.html  configs.m.html  index.html  input_schema.m.html  output_schema.m.html  publish.m.html  revisions.m.html  uploads.m.html
examples/: 311.py  create.py  fuzzy.py  load.py  update_metadata.py
socrata/: __init__.py  authorization.py  configs.py  docs.py  http.py  input_schema.py  job.py  lazy_pool.py  output_schema.py  publish.py  resource.py  revisions.py  sources.py  uploads.py  upsert_job.py  views.py
socrata/builders/: parse_options.py
socrata/operations/: configured_job.py  create.py  operation.py  utils.py
socrata/transport/: ws.py
src/: authorization.py  http.py  input_schema.py  output_schema.py  publish.py  resource.py  revisions.py  token.py  uploads.py  upsert_job.py
src/transport/: ws.py
test/: auth.py  composition_test.py  import_config_test.py  input_schema_test.py  output_schema_test.py  pandas_test.py  revision_test.py  source_test.py  upload_test.py  upsert_job_test.py  views_test.py
test/fixtures/: geo.csv  noaa.geojson  simple.csv  simple.tsv  simple.xls  simple.xlsx  simple_points.geojson  simple_points.kml  skip-header.csv  wards.geojson  wards.kml  wards.kmz
