#`##**using_config
ArgSpec
    Args: config_name, ".$_-0/view
Update a dataset, using the configuration that you previously created, and saved the name of. Takes the config_name parameter which uniquely identifies the config, and the View object, which can be obtained from socrata.views.lookup('view-id42')

Args:

    config_name (str): The config name
    view (View): The view to update
Returns:

    result (ConfiguredJob): Returns the ConfiguredJob
Note: Typical usage would be in a context manager block (as demonstrated in the example below). In this case, the ConfiguredJob is created and immediately launched by way of the call to the ConfiguredJob.csv method.

Examples:

    with open('my-file.csv', 'rb') as my_file:
        (rev, job) = p.using_config(name, view).csv(my_file)
Authorization
ArgSpec
    Args: domain, username, password, request_id_prefix
    Defaults: domain=
Manages basic authorization for accessing the socrata API. This is passed into the Socrata object once, which is the entry point for all operations.

auth = Authorization(
    "data.seattle.gov",
    os.environ['SOCRATA_USERNAME'],
    os.environ['SOCRATA_PASSWORD']
)
publishing = Socrata(auth)**`
[metadata]
description-file = README.md"
